Changed info span to div, no longer inline, background stretches on mobile

--- a/sass/_page-environment.scss
+++ b/sass/_page-environment.scss
@@ -191,6 +191,7 @@
 #env-info-note {
     font-size: .8rem;
     padding: 10px;
+    background: $dgrey;
 }
 
 .env-data-pod--time {
@@ -424,6 +425,7 @@
         position: absolute;
         right: 10px;
         bottom: 40px;
+        background: none;
     }
 
     .env-data-pod--time {
